added callouts with information

--- a/triangulation/triangulation.html
+++ b/triangulation/triangulation.html
@@ -111,10 +111,10 @@ window.Quarto = {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-background-color-overlay: grey;
---cr-section-background-color: white;
+          --cr-section-background-color: white;
 --cr-narrative-background-color-sidebar: white;
 --cr-narrative-text-color-sidebar: black;
+--cr-narrative-background-color-overlay: grey;
         }
       </style>
     
@@ -166,6 +166,19 @@ Caution
 </div>
 <div class="callout-body-container callout-body">
 <p>If viewed on a mobile device, only the text, but not the images, will display.</p>
+</div>
+</div>
+<div class="callout callout-style-default callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Scroll Down
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>Please scroll down to view.</p>
 </div>
 </div>
 <div class="cr-section cr-column-screen sidebar-left">
@@ -221,7 +234,7 @@ Caution
 <p>SEM and network analysis were the most informative for triangulation and prediction of adult depression.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-pan-to="-55%,-15%" data-focus-on="cr-network-analysis-2" data-scale-by="1.0">
+<div class="trigger new-trigger" data-pan-to="-55%,-15%" data-scale-by="1.0" data-focus-on="cr-network-analysis-2">
 <div class="narrative">
 <p>Adult self-reports of abuse were most related and most predictive of adult depression.</p>
 </div>
