--- a/triangulation/triangulation-OLD.html
+++ b/triangulation/triangulation-OLD.html
@@ -50,25 +50,54 @@ div.csl-indent {
 }</style>
 
 
-<script src="triangulation_files/libs/clipboard/clipboard.min.js"></script>
-<script src="triangulation_files/libs/quarto-html/quarto.js" type="module"></script>
-<script src="triangulation_files/libs/quarto-html/tabsets/tabsets.js" type="module"></script>
-<script src="triangulation_files/libs/quarto-html/popper.min.js"></script>
-<script src="triangulation_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="triangulation_files/libs/quarto-html/anchor.min.js"></script>
-<link href="triangulation_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="triangulation_files/libs/quarto-html/quarto-syntax-highlighting-ea385d0e468b0dd5ea5bf0780b1290d9.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="triangulation_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="triangulation_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="triangulation_files/libs/bootstrap/bootstrap-81267100e462c21b3d6c0d5bf76a3417.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
-<script src="triangulation_files/libs/quarto-contrib/intersection-observer-polyfill-1.0.0/intersection-observer.js"></script>
-<script src="triangulation_files/libs/quarto-contrib/scrollama-3.2.0/scrollama.min.js"></script>
-<script src="triangulation_files/libs/quarto-contrib/closeread-0.1.0/closeread.js"></script>
-<link href="triangulation_files/libs/quarto-contrib/social-share-1.0.0/social-share.css" rel="stylesheet">
-<link href="triangulation_files/libs/quarto-contrib/social-share-1.0.0/all.min.css" rel="stylesheet">
+<script src="triangulation-OLD_files/libs/clipboard/clipboard.min.js"></script>
+<script src="triangulation-OLD_files/libs/quarto-html/quarto.js" type="module"></script>
+<script src="triangulation-OLD_files/libs/quarto-html/tabsets/tabsets.js" type="module"></script>
+<script src="triangulation-OLD_files/libs/quarto-html/popper.min.js"></script>
+<script src="triangulation-OLD_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="triangulation-OLD_files/libs/quarto-html/anchor.min.js"></script>
+<link href="triangulation-OLD_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="triangulation-OLD_files/libs/quarto-html/quarto-syntax-highlighting-ea385d0e468b0dd5ea5bf0780b1290d9.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="triangulation-OLD_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="triangulation-OLD_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="triangulation-OLD_files/libs/bootstrap/bootstrap-81267100e462c21b3d6c0d5bf76a3417.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<script src="triangulation-OLD_files/libs/quarto-contrib/intersection-observer-polyfill-1.0.0/intersection-observer.js"></script>
+<script src="triangulation-OLD_files/libs/quarto-contrib/scrollama-3.2.0/scrollama.min.js"></script>
+<script src="triangulation-OLD_files/libs/quarto-contrib/closeread-0.1.0/closeread.js"></script>
+<link href="triangulation-OLD_files/libs/quarto-contrib/social-share-1.0.0/social-share.css" rel="stylesheet">
+<link href="triangulation-OLD_files/libs/quarto-contrib/social-share-1.0.0/all.min.css" rel="stylesheet">
 <meta cr-debug-mode="false">
 <meta cr-remove-header-space="false">
 
+  <script src="https://cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?features=es6"></script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+const typesetMath = (el) => {
+  if (window.MathJax) {
+    // MathJax Typeset
+    window.MathJax.typeset([el]);
+  } else if (window.katex) {
+    // KaTeX Render
+    var mathElements = el.getElementsByClassName("math");
+    var macros = [];
+    for (var i = 0; i < mathElements.length; i++) {
+      var texText = mathElements[i].firstChild;
+      if (mathElements[i].tagName == "SPAN") {
+        window.katex.render(texText.data, mathElements[i], {
+          displayMode: mathElements[i].classList.contains('display'),
+          throwOnError: false,
+          macros: macros,
+          fleqn: false
+        });
+      }
+    }
+  }
+}
+window.Quarto = {
+  typesetMath
+};
+</script>
 
 <link rel="stylesheet" href="_extensions/qmd-lab/closeread/closeread.css">
 <link rel="stylesheet" href="triangulation.css">
@@ -82,10 +111,10 @@ div.csl-indent {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-section-background-color: white;
+          --cr-narrative-background-color-sidebar: white;
+--cr-section-background-color: white;
 --cr-narrative-background-color-overlay: grey;
 --cr-narrative-text-color-sidebar: black;
---cr-narrative-background-color-sidebar: white;
         }
       </style>
     
@@ -126,9 +155,35 @@ div.csl-indent {
 </header>
 
 
+<div class="callout callout-style-default callout-caution callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Caution
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>If viewed on a mobile device, only the text, but not the images, will display.</p>
+</div>
+</div>
+<div class="callout callout-style-default callout-note callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+Scroll Down
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p>Please scroll down to view.</p>
+</div>
+</div>
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<div class="trigger new-trigger" data-scale-by=".45" data-focus-on="cr-child-maltreatment">
+<div class="trigger new-trigger" data-focus-on="cr-child-maltreatment" data-scale-by=".45">
 <section id="background" class="level1 narrative">
 <h1>Background</h1>
 <p>The measurement of child maltreatment has been a longstanding issue.</p>
@@ -165,12 +220,8 @@ div.csl-indent {
 <section id="results" class="level1 narrative">
 <h1>Results</h1>
 <p>SEM (structural equation modeling) best modeled the latent construct of physical abuse and significantly predicted adult depression.</p>
-</section>
-</div>
-<div class="trigger new-trigger" data-pan-to="-45%,-15%" data-focus-on="cr-SEM" data-scale-by="1.0">
-<div class="narrative">
 <p>Adult self-reports played a particularly strong role.</p>
-</div>
+</section>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-network-analysis">
 <div class="narrative">
@@ -183,12 +234,12 @@ div.csl-indent {
 <p>SEM and network analysis were the most informative for triangulation and prediction of adult depression.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-pan-to="-55%,-15%" data-focus-on="cr-network-analysis-2" data-scale-by="1.0">
+<div class="trigger new-trigger" data-scale-by="1.0" data-focus-on="cr-network-analysis-2" data-pan-to="-55%,-15%">
 <div class="narrative">
 <p>Adult self-reports of abuse were most related and most predictive of adult depression.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by=".45" data-focus-on="cr-child-maltreatment">
+<div class="trigger new-trigger" data-focus-on="cr-child-maltreatment" data-scale-by=".45">
 <div class="narrative">
 <p>These findings highlight the usefulness of using advanced quantitative methods when presented with data from multiple reporters, along with the importance and validity of self-reports.</p>
 </div>
@@ -223,6 +274,21 @@ Figure&nbsp;2: triangulation
 </figure>
 </div>
 </div>
+<div id="cr-equations" class="scale-to-fill sticky">
+<p><span id="eq-network"><span class="math display">\[\text{cor}(\text{reporter}_k, \text{reporter}_j) \tag{1}\]</span></span></p>
+<p><span id="eq-OLS"><span class="math display">\[\text{outcome} = \beta_0 + \beta \text{PR1} + \beta \text{PR2} + \beta \text{SR1} + \beta \text{SR2} + \beta \text{SR3} + \beta \text{administrative} + \Sigma \beta \text{covariates} + e_i \tag{2}\]</span></span></p>
+<p><span id="eq-latent"><span class="math display">\[\begin{aligned}
+\text{PR1} &amp;= 1 \cdot X + e_1 \\
+\text{PR2} &amp;= \lambda_2 \cdot X + e_2 \\
+\text{SR1} &amp;= \lambda_3 \cdot X + e_3 \\
+\text{SR2} &amp;= \lambda_4 \cdot X + e_4 \\
+\text{SR3} &amp;= \lambda_5 \cdot X + e_5 \\
+\text{Administrative} &amp;= \lambda_6 \cdot X + e_6 \\
+\text{Outcome} &amp;= \beta_0 + \beta_1 X + \sum_{j} \beta_{2j} \text{Covariate}_j + e_0 \\
+\end{aligned} \tag{3}\]</span></span></p>
+<p><span id="eq-LPA"><span class="math display">\[P(C=k) = logit(\beta_0 + \Sigma \beta_j \text{reporter}_j) \tag{4}\]</span></span></p>
+<p><span id="eq-additive"><span class="math display">\[\text{outcome} = \beta_0 + \beta \text{reporter count} + \Sigma \beta \text{covariates} + e_i \tag{5}\]</span></span></p>
+</div>
 <div id="cr-Lehigh-study" class="scale-to-fill sticky">
 <div id="fig-Lehigh-Study" class="quarto-float quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
@@ -236,10 +302,73 @@ Figure&nbsp;3: structure of the Lehigh Study
 </div>
 </div>
 <div id="cr-multiple-methods" class="scale-to-fill sticky">
-<div id="fig-multiple-methods" class="quarto-float quarto-figure quarto-figure-center anchored">
+<div id="fig-multiple-methods" class="quarto-layout-panel">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-multiple-methods-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img src="multiple-methods.png" class="img-fluid figure-img">
+<div class="quarto-layout-row">
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-multiple-methods" style="flex-basis: 33.3%;justify-content: flex-start;">
+<div id="fig-network" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-network-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide7.png" class="img-fluid figure-img" data-ref-parent="fig-multiple-methods">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-network-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(a) network analysis
+</figcaption>
+</figure>
+</div>
+</div>
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-multiple-methods" style="flex-basis: 33.3%;justify-content: flex-start;">
+<div id="fig-OLS" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-OLS-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide2.png" class="img-fluid figure-img" data-ref-parent="fig-multiple-methods">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-OLS-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(b) ordinary least squares regression
+</figcaption>
+</figure>
+</div>
+</div>
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-multiple-methods" style="flex-basis: 33.3%;justify-content: flex-start;">
+<div id="fig-SEM" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-SEM-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide5.png" class="img-fluid figure-img" data-ref-parent="fig-multiple-methods">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-SEM-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(c) structural equation modeling
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+<div class="quarto-layout-row">
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-multiple-methods" style="flex-basis: 33.3%;justify-content: flex-start;">
+<div id="fig-LPA" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-LPA-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide6.png" class="img-fluid figure-img" data-ref-parent="fig-multiple-methods">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-LPA-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(d) latent profile analysis
+</figcaption>
+</figure>
+</div>
+</div>
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-multiple-methods" style="flex-basis: 33.3%;justify-content: flex-start;">
+<div id="fig-cumulative" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-cumulative-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="cumulative.png" class="img-fluid figure-img" data-ref-parent="fig-multiple-methods">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-cumulative-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(e) cumulative index regression
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-multiple-methods-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;4: multiple analytic approaches
@@ -272,10 +401,35 @@ Figure&nbsp;6: network analysis
 </div>
 </div>
 <div id="cr-SEM-network-analysis" class="scale-to-fill sticky">
-<div id="fig-most-informative" class="quarto-float quarto-figure quarto-figure-center anchored">
+<div id="fig-most-informative" class="quarto-layout-panel">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-most-informative-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img src="most-informative.png" class="img-fluid figure-img">
+<div class="quarto-layout-row">
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-most-informative" style="flex-basis: 50.0%;justify-content: flex-start;">
+<div id="fig-SEM-3" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-SEM-3-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide5.png" class="img-fluid figure-img" data-ref-parent="fig-most-informative">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-SEM-3-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(a) structural equation modeling
+</figcaption>
+</figure>
+</div>
+</div>
+<div class="quarto-layout-cell-subref quarto-layout-cell" data-ref-parent="fig-most-informative" style="flex-basis: 50.0%;justify-content: flex-start;">
+<div id="fig-network-3" class="quarto-float quarto-figure quarto-figure-center anchored">
+<figure class="quarto-float quarto-subfloat-fig figure">
+<div aria-describedby="fig-network-3-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Slide7.png" class="img-fluid figure-img" data-ref-parent="fig-most-informative">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-subfloat-caption quarto-subfloat-fig" id="fig-network-3-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+(b) network analysis
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-most-informative-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;7: most informative analytic approaches
