FIXED!!! (removed multiple images per #cr section)

--- a/triangulation/triangulation.html
+++ b/triangulation/triangulation.html
@@ -82,10 +82,10 @@ div.csl-indent {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-section-background-color: white;
---cr-narrative-background-color-overlay: grey;
---cr-narrative-text-color-sidebar: black;
+          --cr-narrative-background-color-overlay: grey;
 --cr-narrative-background-color-sidebar: white;
+--cr-narrative-text-color-sidebar: black;
+--cr-section-background-color: white;
         }
       </style>
     
@@ -167,7 +167,7 @@ div.csl-indent {
 <p>SEM (structural equation modeling) best modeled the latent construct of physical abuse and significantly predicted adult depression.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-pan-to="-45%,-15%" data-focus-on="cr-SEM" data-scale-by="1.0">
+<div class="trigger new-trigger" data-focus-on="cr-SEM" data-scale-by="1.0" data-pan-to="-45%,-15%">
 <div class="narrative">
 <p>Adult self-reports played a particularly strong role.</p>
 </div>
@@ -183,7 +183,7 @@ div.csl-indent {
 <p>SEM and network analysis were the most informative for triangulation and prediction of adult depression.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-pan-to="-55%,-15%" data-focus-on="cr-network-analysis-2" data-scale-by="1.0">
+<div class="trigger new-trigger" data-focus-on="cr-network-analysis-2" data-scale-by="1.0" data-pan-to="-55%,-15%">
 <div class="narrative">
 <p>Adult self-reports of abuse were most related and most predictive of adult depression.</p>
 </div>
