clarified last image

--- a/triangulation/triangulation.html
+++ b/triangulation/triangulation.html
@@ -83,9 +83,9 @@ div.csl-indent {
       <style>
         :root {
           --cr-narrative-background-color-overlay: grey;
+--cr-section-background-color: white;
 --cr-narrative-background-color-sidebar: white;
 --cr-narrative-text-color-sidebar: black;
---cr-section-background-color: white;
         }
       </style>
     
@@ -128,7 +128,7 @@ div.csl-indent {
 
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<div class="trigger new-trigger" data-scale-by=".45" data-focus-on="cr-child-maltreatment">
+<div class="trigger new-trigger" data-focus-on="cr-child-maltreatment" data-scale-by=".45">
 <section id="background" class="level1 narrative">
 <h1>Background</h1>
 <p>The measurement of child maltreatment has been a longstanding issue.</p>
@@ -167,7 +167,7 @@ div.csl-indent {
 <p>SEM (structural equation modeling) best modeled the latent construct of physical abuse and significantly predicted adult depression.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-SEM" data-scale-by="1.0" data-pan-to="-45%,-15%">
+<div class="trigger new-trigger" data-pan-to="-45%,-15%" data-scale-by="1.0" data-focus-on="cr-SEM">
 <div class="narrative">
 <p>Adult self-reports played a particularly strong role.</p>
 </div>
@@ -183,12 +183,12 @@ div.csl-indent {
 <p>SEM and network analysis were the most informative for triangulation and prediction of adult depression.</p>
 </section>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-network-analysis-2" data-scale-by="1.0" data-pan-to="-55%,-15%">
+<div class="trigger new-trigger" data-pan-to="-55%,-15%" data-scale-by="1.0" data-focus-on="cr-network-analysis-2">
 <div class="narrative">
 <p>Adult self-reports of abuse were most related and most predictive of adult depression.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by=".45" data-focus-on="cr-child-maltreatment">
+<div class="trigger new-trigger" data-focus-on="cr-child-maltreatment-2" data-scale-by=".7">
 <div class="narrative">
 <p>These findings highlight the usefulness of using advanced quantitative methods when presented with data from multiple reporters, along with the importance and validity of self-reports.</p>
 </div>
@@ -294,6 +294,9 @@ Figure&nbsp;8: network analysis
 </figcaption>
 </figure>
 </div>
+</div>
+<div id="cr-child-maltreatment-2" class="center sticky">
+<p><img src="child-maltreatment-2.png" class="img-fluid"></p>
 </div>
 </div>
 </div>
