added link to OJS tutorial

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Andy Grogan-Kaylor">
-<meta name="dcterms.date" content="2025-12-26">
+<meta name="dcterms.date" content="2026-01-08">
 
 <title>closeread Projects</title>
 <style>
@@ -65,7 +65,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">December 26, 2025</p>
+      <p class="date">January 8, 2026</p>
     </div>
   </div>
   
@@ -86,6 +86,7 @@ ul.task-list li input[type="checkbox"] {
 <li><a href="https://globalfamilies.quarto.pub/normativeness-of-violence/">https://globalfamilies.quarto.pub/normativeness-of-violence/</a></li>
 <li><a href="https://agrogan1.github.io/closeread/triangulation/triangulation.html">https://agrogan1.github.io/closeread/triangulation/triangulation.html</a></li>
 </ul>
+<p>Not a <code>closeread</code> document, but a tutorial on using <em>OJS</em>, which can be useful in <code>closeread</code> documents: <a href="https://agrogan1.github.io/closeread/ojs-demo/ojs-demo.html">https://agrogan1.github.io/closeread/ojs-demo/ojs-demo.html</a></p>
 
 </main>
 <!-- /main column -->
