change bolded text to #Heading 1

--- a/empathy/empathy.html
+++ b/empathy/empathy.html
@@ -60,11 +60,11 @@ ul.task-list li input[type="checkbox"] {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-section-background-color: white;
---cr-narrative-text-color-overlay: black;
---cr-narrative-background-color-overlay: lightgrey;
+          --cr-narrative-background-color-overlay: lightgrey;
 --cr-narrative-text-color-sidebar: black;
+--cr-narrative-text-color-overlay: black;
 --cr-narrative-background-color-sidebar: white;
+--cr-section-background-color: white;
         }
       </style>
     
@@ -106,21 +106,23 @@ ul.task-list li input[type="checkbox"] {
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
 <div class="trigger new-trigger" data-focus-on="cr-research-question">
-<div class="narrative">
-<p><strong>Objective:</strong> Child maltreatment is a well-established risk factor for self-harm, yet the affective processes underlying this association remain unclear.</p>
+<section id="objective" class="level1 narrative">
+<h1>Objective</h1>
+<p>Child maltreatment is a well-established risk factor for self-harm, yet the affective processes underlying this association remain unclear.</p>
 <p>This study examines how empathy relates to the association between early childhood maltreatment and lifetime self-harm thoughts.</p>
-</div>
+</section>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-method">
-<div class="narrative">
-<p><strong>Method:</strong> Data from 303 adults were stratified based on the presence or absence of maltreatment history in early childhood. Self-reports of lifetime self-harm thoughts in adulthood and empathy during adolescence were examined in both groups using generalized additive models to assess non-linear relationships. Models also controlled for respondents’ age, gender, and socio-economic status.</p>
-</div>
+<section id="method" class="level1 narrative">
+<h1>Method</h1>
+<p>Data from 303 adults were stratified based on the presence or absence of maltreatment history in early childhood. Self-reports of lifetime self-harm thoughts in adulthood and empathy during adolescence were examined in both groups using generalized additive models to assess non-linear relationships. Models also controlled for respondents’ age, gender, and socio-economic status.</p>
+</section>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-overall">
-<div class="narrative">
-<p><strong>Results:</strong></p>
+<section id="results" class="level1 narrative">
+<h1>Results</h1>
 <p>There was an interesting and complex pattern of results.</p>
-</div>
+</section>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-maltreatment">
 <div class="narrative">
@@ -148,10 +150,11 @@ ul.task-list li input[type="checkbox"] {
 </div>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-overall">
-<div class="narrative">
-<p><strong>Conclusion:</strong> While a moderate level of empathy can be protective from early childhood maltreatment, both low and high levels of empathy were associated with a greater risk for self-harm thoughts.</p>
+<section id="conclusion" class="level1 narrative">
+<h1>Conclusion</h1>
+<p>While a moderate level of empathy can be protective from early childhood maltreatment, both low and high levels of empathy were associated with a greater risk for self-harm thoughts.</p>
 <p>Findings suggest the need to further investigate the role of empathy as a “risky strength” among adults.</p>
-</div>
+</section>
 </div>
 </div>
 <div class="sticky-col">
