use markdown+emoji :arrow_down: to trigger first animation (mermaid chart)

--- a/empathy/empathy.html
+++ b/empathy/empathy.html
@@ -60,11 +60,11 @@ ul.task-list li input[type="checkbox"] {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-background-color-overlay: lightgrey;
---cr-narrative-text-color-sidebar: black;
---cr-narrative-text-color-overlay: black;
---cr-narrative-background-color-sidebar: white;
+          --cr-narrative-text-color-sidebar: black;
+--cr-narrative-background-color-overlay: lightgrey;
 --cr-section-background-color: white;
+--cr-narrative-background-color-sidebar: white;
+--cr-narrative-text-color-overlay: black;
         }
       </style>
     
@@ -106,6 +106,11 @@ ul.task-list li input[type="checkbox"] {
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
 <div class="trigger new-trigger" data-focus-on="cr-research-question">
+<div class="narrative">
+<p><span style="font-size:55px;color:#E2231A;text-align:center;"><span class="emoji" data-emoji="arrow_down">⬇️</span></span></p>
+</div>
+</div>
+<div class="trigger new-trigger" data-focus-on="cr-research-question">
 <section id="objective" class="level1 narrative">
 <h1>Objective</h1>
 <p>Child maltreatment is a well-established risk factor for self-harm, yet the affective processes underlying this association remain unclear.</p>
@@ -134,17 +139,17 @@ ul.task-list li input[type="checkbox"] {
 <p>A significant nonlinear association was observed between empathy and self-harm thoughts.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="-15%,-25%" data-scale-by="1.5" data-focus-on="cr-empathy">
+<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="1.5" data-pan-to="-15%,-25%">
 <div class="narrative">
 <p>Predicted probabilities of self-harm thoughts were lowest at moderate levels of empathy for both groups.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="-45%,-5%" data-scale-by="1.5" data-focus-on="cr-empathy">
+<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="1.5" data-pan-to="-45%,-5%">
 <div class="narrative">
 <p>Risk for self-harm thoughts was highest among individuals with high empathy.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="15%,-5%" data-scale-by="2.0" data-focus-on="cr-empathy">
+<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="2.0" data-pan-to="15%,-5%">
 <div class="narrative">
 <p>Risk for self-harm thoughts was also somewhat high for individuals with low empathy.</p>
 </div>
