playing with centering

--- a/empathy/empathy.html
+++ b/empathy/empathy.html
@@ -9,7 +9,7 @@
 <meta name="author" content="Sunghyun Hong">
 <meta name="author" content="Andy Grogan-Kaylor">
 <meta name="author" content="Todd Herrenkohl">
-<meta name="dcterms.date" content="2026-01-19">
+<meta name="dcterms.date" content="2026-01-20">
 
 <title>When Empathy Helps and Hurts</title>
 <style>
@@ -60,10 +60,10 @@ ul.task-list li input[type="checkbox"] {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-text-color-sidebar: black;
---cr-narrative-background-color-overlay: lightgrey;
+          --cr-narrative-background-color-overlay: lightgrey;
 --cr-section-background-color: white;
 --cr-narrative-background-color-sidebar: white;
+--cr-narrative-text-color-sidebar: black;
 --cr-narrative-text-color-overlay: black;
         }
       </style>
@@ -91,7 +91,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">January 19, 2026</p>
+      <p class="date">January 20, 2026</p>
     </div>
   </div>
   
@@ -139,17 +139,17 @@ ul.task-list li input[type="checkbox"] {
 <p>A significant nonlinear association was observed between empathy and self-harm thoughts.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="1.5" data-pan-to="-15%,-25%">
+<div class="trigger new-trigger" data-focus-on="cr-empathy" data-pan-to="-15%,-25%" data-scale-by="1.5">
 <div class="narrative">
 <p>Predicted probabilities of self-harm thoughts were lowest at moderate levels of empathy for both groups.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="1.5" data-pan-to="-45%,-5%">
+<div class="trigger new-trigger" data-focus-on="cr-empathy" data-pan-to="-45%,-5%" data-scale-by="1.5">
 <div class="narrative">
 <p>Risk for self-harm thoughts was highest among individuals with high empathy.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="2.0" data-pan-to="15%,-5%">
+<div class="trigger new-trigger" data-focus-on="cr-empathy" data-pan-to="15%,-5%" data-scale-by="2.0">
 <div class="narrative">
 <p>Risk for self-harm thoughts was also somewhat high for individuals with low empathy.</p>
 </div>
