--- a/empathy/empathy.html
+++ b/empathy/empathy.html
@@ -60,9 +60,9 @@ ul.task-list li input[type="checkbox"] {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-background-color-overlay: lightgrey;
+          --cr-narrative-background-color-sidebar: white;
+--cr-narrative-background-color-overlay: lightgrey;
 --cr-section-background-color: white;
---cr-narrative-background-color-sidebar: white;
 --cr-narrative-text-color-sidebar: black;
 --cr-narrative-text-color-overlay: black;
         }
@@ -139,17 +139,17 @@ ul.task-list li input[type="checkbox"] {
 <p>A significant nonlinear association was observed between empathy and self-harm thoughts.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-empathy" data-pan-to="-15%,-25%" data-scale-by="1.5">
+<div class="trigger new-trigger" data-scale-by="1.5" data-focus-on="cr-empathy" data-pan-to="-15%,-25%">
 <div class="narrative">
 <p>Predicted probabilities of self-harm thoughts were lowest at moderate levels of empathy for both groups.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-empathy" data-pan-to="-45%,-5%" data-scale-by="1.5">
+<div class="trigger new-trigger" data-scale-by="1.5" data-focus-on="cr-empathy" data-pan-to="-45%,-5%">
 <div class="narrative">
 <p>Risk for self-harm thoughts was highest among individuals with high empathy.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-empathy" data-pan-to="15%,-5%" data-scale-by="2.0">
+<div class="trigger new-trigger" data-scale-by="2.0" data-focus-on="cr-empathy" data-pan-to="15%,-5%">
 <div class="narrative">
 <p>Risk for self-harm thoughts was also somewhat high for individuals with low empathy.</p>
 </div>
